# ScreenRecorder

./: .gitignore  LICENSE.md  README.md  benchmark.py  launch.bat  main.py  pyproject.toml  requirements.txt  suggested_fps.py
.github/workflows/: ci.yml
tests/: test_main.py  test_suggested_fps.py
utils/: screen_recording.py  test_gamepad.py  test_keyboard.py  test_mouse.py  test_screen_capture.py
